Fixed: - Header problem for the history view on IE - Pointer for the mouse cursor on the history tab
svn@4480

--- a/web/src/main/webapp/skins/curriki8/style.css
+++ b/web/src/main/webapp/skins/curriki8/style.css
@@ -2686,18 +2686,17 @@ div.item-panel {
 }
 
 #header-title-zone {
-  width: 430px;
+  width: 440px;
   height: 80px;
   float: left;
   padding-left: 10px;
   padding-right: 10px;
 }
-
 #header-closebutton {
   height: 80px;
-  width: 150px;
+  width: 140px;
   float: right;
-  padding-right: 20px;
+  padding-right: 10px;
   background-color: #E3E4F6;
 }
 #header-closebutton .close-btt {
@@ -2706,7 +2705,7 @@ div.item-panel {
 }
 #printheader .gwt-Button {
   float: right;
-  margin-left: 25px;
+  margin-left: 10px;
 }
 #header-title-link {
   padding-top: 5px;
@@ -3304,7 +3303,7 @@ table.history-versions {
 table.history-versions td {
   padding: 5px 0; 
 }
-#history-versions a {
+.history-versions a {
   cursor: pointer;
 }
 .history-versionlink {
